# connectome-analysis

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/actions/python-poetry-env/: action.yml
.github/workflows/: draft_release.yml  release.yml  test.yml
modelling/: index.html
network/: index.html
network_classic/: index.html
network_local/: index.html
network_stats/: index.html
network_topology/: index.html
randomization/: index.html
search/: search_index.json
src/connalysis/modelling/: __init__.py  modelling.py
src/connalysis/network/: classic.py  topology.py
src/connalysis/randomization/: __init__.py  rand_utils.py  randomization.py
