[tool.poetry]
name = "connectome_analysis"
version = "1.1.0"
description = "Methods for network analysis of graphs coming from brain models and activity on them"
authors = [
    "Daniela Egas Santander <daniela.egas.math@gmail.com>",
    "Christoph Pokorny <christoph.pokorny@openbraininstitute.org>",
    "Jason Smith <jason.smith@ntu.ac.uk>",
    "Michael Wolfgang Reimann <mwr@reimann.science>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

documentation = "https://openbraininstitute.github.io/connectome-analysis/"
homepage = "https://openbraininstitute.github.io/connectome-analysis/"
repository = "https://github.com/openbraininstitute/connectome-analysis.git"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

packages = [
    { include = "connalysis", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "*"
pandas = "*"
scipy = [
  { version = "<1.16", python = ">=3.12,<3.14" },
  { version = ">=1.17", python = ">=3.14" }
]
matplotlib = "*"
tqdm="*"
flagserpy ="*"
bigrandomgraphs = ">=0.1.1"
pyflagsercount = ">=0.5.0"
networkx="*"
scikit-network = "*"
tables = [
  { version = ">=3.10.1", python = ">=3.12,<3.14" },
  { version = ">=3.11", python = ">=3.14" }
]


[tool.poetry.group.dev.dependencies]
black = "*"
mkdocstrings = {version = ">=0.18", extras = ["python"]}
mkdocs-material = "*"
pytest = "*"
pytest-github-actions-annotate-failures = "*"
pytest-cov = "*"
jupyter = "^1.0.0"
seaborn = "*"
urllib3 = ">=2.7.0"

[build-system]
requires = ["poetry-core>=1.2.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov template \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.report]
fail_under = 100
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]
